# duckbrain

./: .coverage  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  QUICKSTART.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
config/: base.toml
docs/: code-review-260722.md  conversion-legibility.md  handoff-cluster-session.md  pipeline-cockpit.md  pipeline-extras.md  releasing.md  sanity-checks.md
ondemand/: form.yml  info.md.erb  manifest.yml  submit.yml.erb  view.html.erb
ondemand/template/: before.sh.erb  script.sh.erb
scripts/: launch.sh  nordic_denoise.m
src/duckbrain/: __init__.py  config.py
src/duckbrain/core/: __init__.py  bids_metadata.py  checks.py  consistency.py  containers.py  conversion.py  conversion_plan.py  dcm2bids_config.py  dicom_inspect.py  dicom_sorter.py  expectations.py  fmriprep.py  ingestion.py  mriqc.py  nordic.py  pipeline.py  qc.py  surveyor.py  toolbox.py
src/duckbrain/gui/: app.py  components.py
src/duckbrain/gui/pages/: 0_Project_Status.py  1_Project_Setup.py  2_Data_Ingestion.py  3_BIDS_Conversion.py  4_Preprocessing.py  5_QC_Dashboard.py  6_Guide.py  6_Job_Monitor.py
src/duckbrain/slurm/: __init__.py  monitor.py  submit.py  templates.py
templates/sbatch/: dcm2bids.sbatch.j2  fmriprep.sbatch.j2  fmriprep_nordic.sbatch.j2  mriqc.sbatch.j2  nordic_bids_input.sbatch.j2  nordic_denoise.sbatch.j2
tests/: test_app_nav.py  test_bids_conformance.py  test_bids_metadata.py  test_config.py  test_consistency.py  test_containers.py  test_conversion_bulk.py  test_conversion_page.py  test_conversion_plan.py  test_dcm2bids_config.py  test_dicom_inspect.py  test_dicom_sorter.py  test_expectations.py  test_fmap_intent.py  test_fmap_run_binding.py  test_gui_components.py  test_ingestion.py  test_ingestion_page.py  test_job_log.py  test_nordic.py  test_pipeline.py  test_preproc_sessions.py  test_sbatch_templates.py  test_setup_page.py  test_status_page.py  test_surveyor.py  test_task_mapping.py  test_toolbox.py  test_use_sessions.py
